Rewrite technical report to focus on RainJava project architecture and internals